[sample page] note to reviewers

--- a/index.html
+++ b/index.html
@@ -87,7 +87,14 @@
 
 <!-- Editor info: https://ace.c9.io/#nav=embedding
  -->
-These are code samples for a book project.
+<b>To our technical reviewers:</b> Hello! Thank you for your help.
+The cosmetics and location of this page will change, but all of the book samples should be available to run
+within this page. If you find issues, please let us know.
+
+Cheers,
+<i>EJ, Nic, Mercedes</i>
+
+
 
 <div id="editor_frame_div">
     <div id="controls_div">
